--- a/rede-social/src/styles.scss
+++ b/rede-social/src/styles.scss
@@ -1,1 +1,2 @@
-/* You can add global styles to this file, and also import other style files */
+// Importando fontes para o projeto
+@import './assets/fontes/fontes.scss';
